<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
   >

    <PreferenceCategory
        android:title="@string/general">


        <ListPreference
            android:entries="@array/text_size"
            android:entryValues="@array/text_sizesID"
            android:key="text_size_preference"
            android:title="@string/Textsize"
            android:summary="@string/testSizeDescription"
            android:icon="@drawable/ic_format_size"/>

        <ListPreference
            android:entries="@array/styles"
            android:entryValues="@array/stylesID"
            android:key="style_preference"
            android:title="@string/Style"
            android:defaultValue="@string/Default"
            android:icon="@drawable/ic_action_brush"/>

        <ListPreference
            android:entries="@array/language"
            android:entryValues="@array/language_ids"
            android:icon="@drawable/ic_language"
            android:key="language_preference"
            android:title="@string/language" />

        <SeekBarPreference
            android:key="Brightness"
            android:id="@+id/brightnessScreen"
            android:icon="@drawable/ic_settings_brightness"
            android:title="Brightness"
            android:max="255"
            android:defaultValue="0" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/voice_sound">

    </PreferenceCategory>

    <SwitchPreference
        android:key="voice_recongnition"
        android:icon="@drawable/ic_mic"
        android:defaultValue="true"
        android:title="@string/voice_recognition" />


    <SwitchPreference
        android:key="vibration"
        android:icon="@drawable/ic_vibration"
        android:defaultValue="true"
        android:title="@string/vibration" />

    <SwitchPreference
        android:defaultValue="false"
        android:title="@string/text_speech"
        android:key="text_speech" />

</PreferenceScreen>